added new scripts

--- a/public/index.html
+++ b/public/index.html
@@ -47,8 +47,12 @@
         </main>
 
         <!-- build:js public/js/day-calendar.js -->
-        <script src="js/main.js"></script>
+        <script src="js/lib/TMCD.js"></script>
+        <script src="js/lib/Logger.js"></script>
         <script src="js/lib/EventEmitter.js"></script>
+        <script src="js/lib/CalendarEvent.js"></script>
+        <script src="js/lib/DayView.js"></script>
+        <script src="js/lib/Calendar.js"></script>
         <script src="js/main.js"></script>
         <!-- endbuild -->
     </body>
