--- a/index.html
+++ b/index.html
@@ -344,6 +344,15 @@ ul#files.view-details li.header {
     <input id="search" type="text" placeholder="Search" autocomplete="off" />
     <div id="wrapper">
       <h1>Day Calendar UI</h1>
+      <h2>Releases / </h2>
+      <ul id="files" class="view-tiles">
+        <li><a href="https://github.com/tjmcduffie/day-calendar-ui/raw/master/build/day-calendar-ui-current.zip" class="" title="Current release">
+          <span class="name">current</span><span class="size"></span>
+        </a></li>
+        <li><a href="https://github.com/tjmcduffie/day-calendar-ui/raw/master/build/day-calendar-ui-1.0.0.zip" class="" title="Release v1.0.0">
+          <span class="name">v1.0.0</span><span class="size"></span>
+        </a></li>
+      </ul>
       <h2>Documentation / </h2>
       <ul id="files" class="view-tiles">
         <li><a href="reports/docs/index.html" class="" title="API Documentation">
